Fixes bug 687542 Print with pswrite gives 'Could not open the file \\spool\yourprinter'. Add a %printer% IODevice for OS/2, which opens to a temporary file then later copies it to the print spooler.  This will need "%printer%yourprinter", not "\\spool\yourprinter". This is needed to make pswrite write to a printer queue.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5325 a1074d23-0009-0410-80fe-cf8c14f379e6