gs/src/gp_os2.c
@@ -54,6 +54,7 @@
 #include "stdlib.h"		/* need _osmode, exit */
 #include "time_.h"
 #include <time.h>		/* should this be in time_.h? */
+#include "gp_os2.h"
 #include "gdevpm.h"
 #ifdef __EMX__
 #include <sys/emxload.h>
@@ -397,9 +398,7 @@ gp_do_exit(int exit_status)
 }
 
 /* ------ Printer accessing ------ */
-private int pm_find_queue(char *queue_name, char *driver_name);
 private int is_os2_spool(const char *queue);
-private int pm_spool(char *filename, const char *queue);
 
 /* Put a printer file (which might be stdout) into binary or text mode. */
 /* This is not a standard gp procedure, */
@@ -500,7 +499,7 @@ gp_setmode_binary(FILE * pfile, bool binary)
 /* If strlen(queue_name)==0, return default queue and driver name */
 /* If queue_name supplied, return driver_name */
 /* returns 0 if OK, non-zero for error */
-private int
+int
 pm_find_queue(char *queue_name, char *driver_name)
 {
     SPLERR splerr;
@@ -553,9 +552,9 @@ pm_find_queue(char *queue_name, char *driver_name)
 		    } else {
 			/* list queue details */
 			if (prq->fsType & PRQ3_TYPE_APPDEFAULT)
-			    eprintf1("  %s  (DEFAULT)\n", prq->pszName);
+			    eprintf1("  \042%s\042  (DEFAULT)\n", prq->pszName);
 			else
-			    eprintf1("  %s\n", prq->pszName);
+			    eprintf1("  \042%s\042\n", prq->pszName);
 		    }
 		    prq++;
 		}		/*endfor cReturned */
@@ -600,7 +599,7 @@ is_os2_spool(const char *queue)
 /* Spool file to queue */
 /* return 0 if successful, non-zero if error */
 /* if filename is NULL, return 0 if spool queue is valid, non-zero if error */
-private int
+int
 pm_spool(char *filename, const char *queue)
 {
     HSPL hspl;
